fix: contact box top align

--- a/src/components/sections/contact-box/contact-box.module.css
+++ b/src/components/sections/contact-box/contact-box.module.css
@@ -36,8 +36,6 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-
-  justify-content: flex-end;
 }
 
 .contactSelectorWrapper {
